# chats

./: .gitignore  CMakeLists.txt
chats/: CMakeLists.txt
chats/p2p/: CMakeLists.txt  README
chats/p2p/crc/: crc16-ccitt.c  crc16-ccitt.h
chats/p2p/protocol/: protocol.c  protocol.h
chats/p2p/server/: CMakeLists.txt  main.c
chats/p2p/server/dao/: dao-cache.c  dao-cache.h  dao.c  dao.h
chats/p2p/server/receiver/: receiver.c  receiver.h
chats/p2p/server/sqlite/: db.sql
chats/p2p/server/watchdog/: watchdog.c  watchdog.h
chats/p2p/server/watcher/: watcher.h
common/: CMakeLists.txt  avl-tree.c  avl-tree.h  common.h  hash-functions.c  hash-functions.h  hash-map.c  hash-map.h  lib.c  lib.h  list.c  list.h  memory.c  memory.h  queue.c  queue.h  stack.c  stack.h
coroutine/: CMakeLists.txt  coroutine.h
include/: thread-pool.hpp
io-service/: CMakeLists.txt  io-service.c  io-service.h
network/: CMakeLists.txt  endpoint.c  endpoint.h  network.c  network.h
network/client/: client.c  client.h
network/connection/: connection.c  connection.h
network/one-to-many/: server.c  server.h
network/one-to-one/: CMakeLists.txt  server.c  server.h
one-to-one/: CMakeLists.txt  README.txt  client-tcp.cpp  client-udp.cpp  client.cpp  one-to-one.h  server.c  server.cpp  server.h
one-to-one/include/: Client.hpp  Message.hpp  MessageIO.hpp  Parser.hpp  Server.hpp
one-to-one/src/: Client.cpp  Parser.cpp  Server.cpp
tests/: CMakeLists.txt  io.c  main.c  otm-server.c  oto-server.c  tcp-client.c  tp.c  udp-client.c
thread-pool/: CMakeLists.txt  thread-pool.c  thread-pool.h
timer/: CMakeLists.txt  timer.c  timer.h
